[package]
name = "walker-common"
description = "Common functionality for SBOM and CSAF walker"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
repository = "https://github.com/scm-rs/csaf-walker"
categories = ["data-structures"]
keywords = ["csaf"]
readme = "../README.md"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# normal
anyhow = { workspace = true }
async-trait = { workspace = true }
backon = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["std"] }
csv = { workspace = true }
digest = { workspace = true }
filetime = { workspace = true }
flexible-time = { workspace = true }
fluent-uri = { workspace = true }
fsquirrel = { workspace = true }
futures-util = { workspace = true }
html-escape = { workspace = true }
httpdate = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
indicatif-log-bridge = { workspace = true }
log = { workspace = true }
openid = { workspace = true }
pem = { workspace = true }
reqwest = { workspace = true, features = ["json", "query"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
thousands = { workspace = true }
time = { workspace = true, features = ["serde", "formatting", "local-offset"] }
tokio = { workspace = true, features = ["sync", "fs"] }
tracing = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }

# optional
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
bzip2 = { workspace = true, optional = true }
bzip2-rs = { workspace = true, optional = true, features = ["rustc_1_51"] }
clap = { workspace = true, features = ["derive", "env"], optional = true }
env_logger = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
liblzma = { workspace = true, optional = true }
sequoia-openpgp = { workspace = true, optional = true }

[features]
default = ["bzip2"]
openpgp = ["sequoia-openpgp"]
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

# deprecated
cli = ["clap", "env_logger"]

_crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
_test = [
    "bzip2",
    "liblzma",
    "flate2"
]

# enable for semver checks (in addition to default)
_semver = ["_test", "_crypto-nettle"]

[package.metadata.cargo-all-features]
always_include_features = [
    "sequoia-openpgp/crypto-nettle",
]
denylist = [
    "cli",
    "_crypto-nettle",
    "_test",
    "_semver",
]

[dev-dependencies]
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rstest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }

[package.metadata.release]
enable-features = ["sequoia-openpgp/crypto-nettle"]
tag = true
