[package]
name = "csaf-walker"
description = "A library to work with CSAF data"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
repository = "https://github.com/scm-rs/csaf-walker"
categories = ["data-structures"]
keywords = ["csaf", "vex"]
readme = "../README.md"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# normal
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
csv = { workspace = true }
digest = { workspace = true }
fluent-uri = { workspace = true }
fsquirrel = { workspace = true }
futures = { workspace = true }
hickory-resolver = { workspace = true, features = ["tokio"] }
html-escape = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
sectxtlib = { workspace = true }
sequoia-openpgp = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing", "serde"] }
tokio = { workspace = true, features = ["macros", "fs"] }
url = { workspace = true, features = ["serde"] }
walkdir = { workspace = true }

# optional
csaf = { workspace = true, optional = true }
# for csaf-validator-lib
deno_core = { workspace = true, optional = true }

# internal
walker-common = { workspace = true, features = ["openpgp"] }

[dev-dependencies]
env_logger = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
walker-common = { workspace = true, features = ["openpgp", "liblzma"] }

[features]
default = ["crypto-nettle", "csaf"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-openssl = ["sequoia-openpgp/crypto-openssl"]
crypto-botan = ["sequoia-openpgp/crypto-botan"]
crypto-rust = ["sequoia-openpgp/crypto-rust"]

csaf-validator-lib = [
    "deno_core",
]

# enable for semver checks (in addition to default)
_semver = ["csaf-validator-lib"]

[package.metadata.cargo-all-features]
always_include_features = [
    "crypto-nettle",
]
denylist = [
    "crypto-cng",
    "crypto-openssl",
    "crypto-botan",
    "crypto-rust",
    "_semver",
]
